[tool.poetry]
name = "qshed-gateway"
version = "0.1.0"
description = ""
authors = ["nixoninnes"]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.1.1"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
influxdb-client = "^1.28.0"
httpx = "^0.22.0"
SQLAlchemy = "^1.4.36"
python-dotenv = "^0.20.0"
qshed-client = {path = "packages/qshed_client-0.1.2-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
